[tool.poetry]
name = "timhughes-pypi-testing"
version = "development"  # Version is controlled by git tags at release time. Leave this at 'development'
description = "A simple application"
authors = ["Tim Hughes <thughes@thegoldfish.org>"]
# Use identifier from https://spdx.org/licenses/
license = "MIT"
readme = "README.md"
homepage = "https://github.com/timhughes/timhughes-pypi-testing"
repository = "https://github.com/timhughes/timhughes-pypi-testing"
documentation = "https://github.com/timhughes/timhughes-pypi-testing/blob/master/README.md"
classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 1 - Planning",
]
[tool.poetry.urls]
# If you publish you package on PyPI, these will appear in the Project Links section.
"Bug Tracker" = "https://github.com/timhughes/timhughes-pypi-testing/issues"

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = "^3.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-xdist = "^2.1.0"
black = "^22.0"
bandit = "^1.6.2"
pylint = "^2.6.0"
vulture = "^2.3"
jedi-language-server = "^0.22.0"
reorder-python-imports = "^2.3.6"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
# Example
filterwarnings = [
    "ignore::DeprecationWarning:moto.*:",
    "ignore::DeprecationWarning:boto.*:",
]
